Dynamic Topology Undo Applied to Wrong Mesh #39196

Closed
opened 2014-03-15 05:48:19 +01:00 by Steve · 13 comments

System Information
Ubuntu 13.10 64 bit, Nvidia Geforce GTX 770

Blender Version
Broken: 2.70 RC, Hash 2525f9c

Short description of error
After using dynamic topology on a mesh, then switching to another mesh and using dynamic topology on it, and then undoing a few times, the topology of the first mesh is applied to the second.

Exact steps for others to reproduce the error
Start with default cube. Duplicate and move it. Select the original cube, and enter sculpt mode and select dynamic topology. Sculpt on the cube. Go to object mode, select the second cube, and enter sculpt mode and enable dynamic topology. Sculpt something (tested with a single stroke to create a single undo step). Hit Ctrl-Z to undo several time, and the topology of the original cube will have replaced this topology.

**System Information** Ubuntu 13.10 64 bit, Nvidia Geforce GTX 770 **Blender Version** Broken: 2.70 RC, Hash 2525f9c **Short description of error** After using dynamic topology on a mesh, then switching to another mesh and using dynamic topology on it, and then undoing a few times, the topology of the first mesh is applied to the second. **Exact steps for others to reproduce the error** Start with default cube. Duplicate and move it. Select the original cube, and enter sculpt mode and select dynamic topology. Sculpt on the cube. Go to object mode, select the second cube, and enter sculpt mode and enable dynamic topology. Sculpt something (tested with a single stroke to create a single undo step). Hit Ctrl-Z to undo several time, and the topology of the original cube will have replaced this topology.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @romulox_x

Added subscriber: @romulox_x

Added subscriber: @joel.godin

Added subscriber: @joel.godin

Yes, does it here on OSX as well. Hash 3d3031d1

Yes, does it here on OSX as well. Hash 3d3031d1

Added subscriber: @OliverBurn

Added subscriber: @OliverBurn

Same, RC2, Linux mint 15 64bit, GTX275

There's a short screencast of it happening:

https://dl.dropboxusercontent.com/u/34465710/bugs/scuptstrangeundo.mp4.zip

Same, RC2, Linux mint 15 64bit, GTX275 There's a short screencast of it happening: https://dl.dropboxusercontent.com/u/34465710/bugs/scuptstrangeundo.mp4.zip

Added subscriber: @mont29

Added subscriber: @mont29
Antonis Ryakiotakis was assigned by Bastien Montagne 2014-03-19 20:36:45 +01:00

Antony, I bet you’ll be delighted to handle this one too? ;)

Antony, I bet you’ll be delighted to handle this one too? ;)

This is a duplicate, I'll check it later

This is a duplicate, I'll check it later

I have been trying to fix this for the past 2 days. Making sure the undo entries get cleaned up on undo if we detect another object's entry is easy. What is extremely hard however, is making sure the bmesh log entries stay consistent throughout cleanup/redo/undo and selecting different objects. I have more or less found a way that works but it's still possible to break this somehow. Needless to say, finding ways to crash the fixes is a difficulty in itself.

Current behaviour can also crash if one is adventurous and I keep thinking it might be a good idea to disallow switching objects while in dyntopo mode altogether.

However it is time to move to something else.

I will attach patch with current state for later.

I have been trying to fix this for the past 2 days. Making sure the undo entries get cleaned up on undo if we detect another object's entry is easy. What is extremely hard however, is making sure the bmesh log entries stay consistent throughout cleanup/redo/undo and selecting different objects. I have more or less found a way that works but it's still possible to break this somehow. Needless to say, finding ways to crash the fixes is a difficulty in itself. Current behaviour can also crash if one is adventurous and I keep thinking it might be a good idea to disallow switching objects while in dyntopo mode altogether. However it is time to move to something else. I will attach patch with current state for later.

This issue was referenced by 33df6aa12e

This issue was referenced by 33df6aa12ea6f627b5b238e6eec64cffb2acdbd4

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 33df6aa12e.

Closed by commit 33df6aa12e.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39196
No description provided.